--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
   const startText = document.getElementById('startText');
 
   const modelConfig = {
-    A: { path: 'models/little_tokyo.glb', scale: '200 200 200', label: 'little_tokyo' },
-    B: { path: 'models/ramen_bar.glb', scale: '200 200 200', label: 'sushi_bar' },
-    C: { path: 'models/ramen.glb', scale: '200 200 200', label: 'ramen' }
+    A: { path: 'models/test.glb', scale: '200 200 200', label: 'little_tokyo' },
+    B: { path: 'models/test.glb', scale: '200 200 200', label: 'sushi_bar' },
+    C: { path: 'models/test.glb', scale: '200 200 200', label: 'ramen' }
   };
 
   const mA = document.getElementById('markerA');
