--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
     <!-- assets container (we'll add a-asset-item dynamically on demand) -->
     <a-assets id="assets"></a-assets>
 
-    <a-nft id="markerA" type="nft" url="nft/subway_ticket/subway_ticket"
+    <a-nft id="markerA" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/subway_ticket/subway_ticket"
         smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
     </a-nft>
 
-    <a-nft id="markerB" type="nft" url="nft/ramen_menu/ramen_menu"
+    <a-nft id="markerB" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_menu/ramen_menu"
         smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
     </a-nft>
 
-    <a-nft id="markerC" type="nft" url="nft/ramen_bar_entrance/ramen_bar_entrance"
+    <a-nft id="markerC" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_bar_entrance/ramen_bar_entrance"
         smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
     </a-nft>
 
