--- a/index.html
+++ b/index.html
@@ -2,168 +2,139 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Sequential Markers — Minimal</title>
+  <title>Sequential Markers — Direct Load (Absolute Paths)</title>
 
-  <!-- A-Frame + AR.js (absolute URLs) -->
+  <!-- A-Frame + AR.js -->
   <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
   <style>
     body { margin: 0; overflow: hidden; }
-    .hint {
+    .arjs-loader {
+      height: 100%;
+      width: 100%;
       position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      bottom: 20px;
-      color: yellow;
-      font-weight: 700;
-      text-shadow: 0 0 6px black;
-      z-index: 10000;
-      pointer-events: none;
-      display: none;
+      top: 0; left: 0;
+      background-color: rgba(0,0,0,0.8);
+      z-index: 9999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+    .arjs-loader div { text-align:center; font-size:1.25em; color:white; }
   </style>
 </head>
-<body>
-  <div id="hint" class="hint"></div>
+
+<body style="margin:0; overflow:hidden;">
+  <div class="arjs-loader"><div>Loading, please wait...</div></div>
 
   <a-scene
     vr-mode-ui="enabled: false"
     renderer="logarithmicDepthBuffer: true"
     embedded
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true;"
   >
-    <a-assets id="assets"></a-assets>
+    <!-- Marker A: contains its model directly (absolute path) -->
+    <a-nft id="markerA"
+      type="nft"
+      url="https://lucian-lu.github.io/trm-lab-2/nft/subway_ticket/subway_ticket"
+      smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5"
+    >
+      <a-entity
+        gltf-model="https://lucian-lu.github.io/trm-lab-2/models/test.glb"
+        scale="200 200 200"
+        position="0 0 0"
+        rotation="0 0 0"
+      ></a-entity>
+    </a-nft>
 
-    <a-nft id="markerA" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/subway_ticket/subway_ticket"></a-nft>
-    <a-nft id="markerB" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_menu/ramen_menu"></a-nft>
-    <a-nft id="markerC" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_bar_entrance/ramen_bar_entrance"></a-nft>
+    <!-- Marker B: initially empty, will receive content when A is found -->
+    <a-nft id="markerB"
+      type="nft"
+      url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_menu/ramen_menu"
+      smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5"
+    >
+      <!-- content added dynamically -->
+    </a-nft>
 
-    <a-entity camera>
-      <a-text
-        id="startText"
-        value="I feel quite hungry!"
-        position="-1 0 -2"
-        color="yellow"
-        width="5"
-        scale="0.5 0.5 0.5"
-      ></a-text>
-    </a-entity>
+    <!-- Marker C: initially empty, will receive content when B is found -->
+    <a-nft id="markerC"
+      type="nft"
+      url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_bar_entrance/ramen_bar_entrance"
+      smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5"
+    >
+      <!-- content added dynamically -->
+    </a-nft>
+
+    <a-entity camera></a-entity>
   </a-scene>
 
-<script>
-  const hintEl = document.getElementById('hint');
-  const assets = document.getElementById('assets');
-  const startText = document.getElementById('startText');
+  <script>
+    // flags to prevent duplicate insertion
+    let addedToB = false;
+    let addedToC = false;
 
-  const state = { scannedA: false, scannedB: false, loaded: { A: false, B: false, C: false } };
+    // absolute model URLs
+    const modelA = "https://lucian-lu.github.io/trm-lab-2/models/test.glb";
+    const modelB = "https://lucian-lu.github.io/trm-lab-2/models/test.glb";
+    const modelC = "https://lucian-lu.github.io/trm-lab-2/models/test.glb";
 
-const modelConfig = {
-  A: {
-    path: "https://lucian-lu.github.io/trm-lab-2/models/test.glb",
-    scale: "200 200 200",
-    label: "little_tokyo"
-  },
-  B: {
-    path: "https://lucian-lu.github.io/trm-lab-2/models/test.glb",
-    scale: "200 200 200",
-    label: "sushi_bar"
-  },
-  C: {
-    path: "https://lucian-lu.github.io/trm-lab-2/models/test.glb",
-    scale: "200 200 200",
-    label: "ramen"
-  }
-};
+    const markerA = document.getElementById('markerA');
+    const markerB = document.getElementById('markerB');
+    const markerC = document.getElementById('markerC');
 
-  const mA = document.getElementById('markerA');
-  const mB = document.getElementById('markerB');
-  const mC = document.getElementById('markerC');
+    // when A is found: ensure B has its content (like example)
+    markerA.addEventListener('markerFound', () => {
+      if (addedToB) return;
+      addedToB = true;
 
-  function showHint(msg, time = 3000){
-    hintEl.textContent = msg;
-    hintEl.style.display = 'block';
-    setTimeout(()=>{ hintEl.style.display = 'none'; }, time);
-  }
-
-  function createWrapperIfNeeded(markerEl, cfg){
-    if(markerEl._wrapper) return;
-    const wrapper = document.createElement('a-entity');
-    wrapper.setAttribute('visible','false');
-    wrapper.setAttribute('scale', cfg.scale || '100 100 100');
-    wrapper.setAttribute('rotation','-90 0 0');
-    markerEl.appendChild(wrapper);
-    markerEl._wrapper = wrapper;
-  }
-
-  function createAssetItemForKey(key, cfg){
-    const assetId = `asset-${key}`;
-    if(document.getElementById(assetId)) return document.getElementById(assetId);
-    const absoluteUrl = new URL(cfg.path, window.location.href).href;
-    const ai = document.createElement('a-asset-item');
-    ai.setAttribute('id', assetId);
-    ai.setAttribute('src', absoluteUrl);
-    ai.setAttribute('crossorigin', 'anonymous');
-    assets.appendChild(ai);
-    return ai;
-  }
-
-  function loadModel(markerEl, key){
-    if(!modelConfig[key] || state.loaded[key]) return;
-    const cfg = modelConfig[key];
-
-    createWrapperIfNeeded(markerEl, cfg);
-    createAssetItemForKey(key, cfg);
-
-    const modelEl = document.createElement('a-entity');
-    modelEl.setAttribute('gltf-model', `#asset-${key}`);
-    modelEl.setAttribute('scale', cfg.scale);
-    modelEl.setAttribute('animation-mixer', '');
-    modelEl.setAttribute('visible', 'false');
-
-    modelEl.addEventListener('model-loaded', ()=>{
-      state.loaded[key] = true;
-      markerEl._wrapper.setAttribute('visible','true');
-      modelEl.setAttribute('visible','true');
-      showHint(`Model ${cfg.label} loaded`, 1500);
+      markerB.innerHTML += `
+        <a-entity
+          gltf-model="${modelB}"
+          scale="200 200 200"
+          position="0 0 0"
+          rotation="0 0 0"
+        ></a-entity>
+        <a-text
+          value="Second marker active"
+          color="magenta"
+          width="6"
+          rotation="-90 0 0"
+          position="0 0 0.2"
+        ></a-text>
+      `;
     });
 
-    modelEl.addEventListener('error', ()=>{
-      showHint('Error loading model', 3000);
+    // when B is found: ensure C has its content
+    markerB.addEventListener('markerFound', () => {
+      if (!addedToB) return; // enforce sequence (optional)
+      if (addedToC) return;
+      addedToC = true;
+
+      markerC.innerHTML += `
+        <a-entity
+          gltf-model="${modelC}"
+          scale="200 200 200"
+          position="0 0 0"
+          rotation="0 0 0"
+        ></a-entity>
+        <a-text
+          value="Third marker active"
+          color="cyan"
+          width="6"
+          rotation="-90 0 0"
+          position="0 0 0.2"
+        ></a-text>
+      `;
     });
 
-    markerEl._wrapper.appendChild(modelEl);
-  }
-
-  createWrapperIfNeeded(mA, modelConfig.A);
-  createWrapperIfNeeded(mB, modelConfig.B);
-  createWrapperIfNeeded(mC, modelConfig.C);
-
-  mA.addEventListener('markerFound', ()=>{
-    if(!state.loaded.A) loadModel(mA,'A');
-    state.scannedA = true;
-    if(startText) startText.setAttribute('visible', 'false');
-    showHint('First marker scanned', 1500);
-  });
-
-  mB.addEventListener('markerFound', ()=>{
-    if(!state.scannedA){
-      showHint('Scan first marker first', 2000);
-      return;
-    }
-    if(!state.loaded.B) loadModel(mB,'B');
-    state.scannedB = true;
-    showHint('Second marker scanned', 1500);
-  });
-
-  mC.addEventListener('markerFound', ()=>{
-    if(!state.scannedB){
-      showHint('Scan second marker first', 2000);
-      return;
-    }
-    if(!state.loaded.C) loadModel(mC,'C');
-    showHint('Third marker scanned', 1500);
-  });
-</script>
+    // hide loader after initial load attempt or a fixed time
+    window.addEventListener('load', () => {
+      setTimeout(()=> {
+        const loader = document.querySelector('.arjs-loader');
+        if (loader) loader.style.display = 'none';
+      }, 8000);
+    });
+  </script>
 </body>
 </html>
