--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
       <a-entity
         class="modelA"
         gltf-model="https://lucian-lu.github.io/trm-lab-2/models/little_tokyo.glb"
-        scale="200 200 200"
-        position="0 0 -150"
-        rotation="-90 0 0"
+        scale="500 500 200"
+        position="0 0 0"
+        rotation="0 0 0"
         visible="false"
       ></a-entity>
 
       <a-text
         class="textA"
         value="Welcome to Little Tokyo"
-        color="white"
-        width="300"
-        rotation="-90 0 0"
-        position="-150 0 -75"
+        color="red"
+        width="100"
+        rotation="0 0 0"
+        position="0 0 0"
         visible="false"
       ></a-text>
     </a-nft>
@@ -63,25 +63,25 @@
     <a-nft
       id="markerB"
       type="nft"
-      url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_menu/ramen_bar_entrance"
+      url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_bar_entrance/ramen_bar_entrance"
       smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5"
     >
       <a-entity
         class="modelB"
         gltf-model="https://lucian-lu.github.io/trm-lab-2/models/ramen_bar.glb"
-        scale="200 200 200"
-        position="0 0 -150"
-        rotation="90 -180 0"
+        scale="500 500 200"
+        position="0 0 0"
+        rotation="0 0 0"
         visible="false"
       ></a-entity>
 
       <a-text
         class="textB"
         value="Yum yum yum I want some ramen"
-        color="white"
+        color="blue"
         width="300"
-        rotation="-90 0 0"
-        position="-150 0 -75"
+        rotation="0 0 0"
+        position="0 0 0"
         visible="false"
       ></a-text>
     </a-nft>
@@ -89,15 +89,15 @@
     <a-nft
       id="markerC"
       type="nft"
-      url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_bar_entrance/ramen_menu"
+      url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_menu/ramen_menu"
       smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5"
     >
       <a-entity
         class="modelC"
         gltf-model="https://lucian-lu.github.io/trm-lab-2/models/ramen.glb"
-        scale="200 200 200"
-        position="0 0 -150"
-        rotation="90 -180 0"
+        scale="500 500 200"
+        position="0 0 0"
+        rotation="0 0 0"
         visible="false"
       ></a-entity>
 
@@ -106,8 +106,8 @@
         value="Mmmh tasty"
         color="white"
         width="300"
-        rotation="-90 0 0"
-        position="-150 0 -75"
+        rotation="0 0 0"
+        position="0 0 0"
         visible="false"
       ></a-text>
     </a-nft>
@@ -116,10 +116,10 @@
       <a-text
         id="startText"
         value="I feel quite hungry!"
-        position="-1 0 -2"
+        position="0 0 0"
         color="yellow"
         width="5"
-        scale="0.5 0.5 0.5"
+        scale="1 1 1"
       ></a-text>
     </a-entity>
   </a-scene>
