--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
       url="https://lucian-lu.github.io/trm-lab-2/nft/subway_ticket/subway_ticket"
       smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5"
     >
-      <!-- Model: upright, rotated so it sits naturally on the marker plane -->
       <a-entity
         class="modelA"
         gltf-model="https://lucian-lu.github.io/trm-lab-2/models/little_tokyo.glb"
-        scale="200 200 200"
+        scale="50 50 50"
         position="0 0 -120"
         rotation="-90 0 0"
         visible="false"
@@ -57,7 +56,7 @@
         color="red"
         width="100"
         rotation="-90 0 0"
-        position="0 -60 -120"
+        position="0 -40 -120"
         visible="false"
       ></a-text>
     </a-nft>
@@ -71,7 +70,7 @@
       <a-entity
         class="modelB"
         gltf-model="https://lucian-lu.github.io/trm-lab-2/models/ramen_bar.glb"
-        scale="200 200 200"
+        scale="50 50 50"
         position="0 0 -120"
         rotation="-90 0 0"
         visible="false"
@@ -83,7 +82,7 @@
         color="blue"
         width="200"
         rotation="-90 0 0"
-        position="0 -60 -120"
+        position="0 -40 -120"
         visible="false"
       ></a-text>
     </a-nft>
@@ -97,7 +96,7 @@
       <a-entity
         class="modelC"
         gltf-model="https://lucian-lu.github.io/trm-lab-2/models/ramen.glb"
-        scale="200 200 200"
+        scale="50 50 50"
         position="0 0 -120"
         rotation="-90 0 0"
         visible="false"
@@ -109,7 +108,7 @@
         color="white"
         width="200"
         rotation="-90 0 0"
-        position="0 -60 -120"
+        position="0 -40 -120"
         visible="false"
       ></a-text>
     </a-nft>
@@ -118,10 +117,11 @@
       <a-text
         id="startText"
         value="I feel quite hungry!"
-        position="-0.6 0 -1.5"
+        position="0 0 -1.4"
         color="yellow"
-        width="2"
+        width="2.2"
         scale="0.7 0.7 0.7"
+        rotation="0 0 0"
       ></a-text>
     </a-entity>
   </a-scene>
