--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
       <a-text
         class="textA"
-        value="Welcome to Little Tokyo"
+        value="Now to find somewhere to eat..."
         color="red"
-        width="1"
-        rotation="-90 0 0"
-        position="5 5 -3"
+        width="200"
+        rotation="0 0 0"
+        position="0 0 -3"
         visible="false"
       ></a-text>
     </a-nft>
@@ -78,7 +78,7 @@
 
       <a-text
         class="textB"
-        value="Yum — ramen time"
+        value="I think I'll get some ramen."
         color="blue"
         width="1.5"
         rotation="0 0 0"
@@ -104,7 +104,7 @@
 
       <a-text
         class="textC"
-        value="Mmmh tasty"
+        value="Mmm tasty. Ramen is the best."
         color="white"
         width="1"
         rotation="0 0 0"
@@ -116,8 +116,8 @@
     <a-entity camera>
       <a-text
         id="startText"
-        value="I feel quite hungry!"
-        position="-2 0 -3"
+        value="I feel quite hungry! Time to go out."
+        position="1 0 -5"
         color="yellow"
         width="1.5"
         scale="1 1 1"
