--- a/index.html
+++ b/index.html
@@ -49,16 +49,19 @@
         rotation="-90 0 0"
         visible="false"
       ></a-entity>
-
-      <a-text
+      
+        <a-text
         class="textA"
         value="Now to find somewhere to eat..."
         color="red"
-        width="1.5"
+        width="4"
+        align="center"
+        anchor="center"
         rotation="-90 0 0"
-        position="0 0 0.2"
+        position="0 0.05 0"
+        scale="0.6 0.6 0.6"
         visible="false"
-      ></a-text>
+        ></a-text>
     </a-nft>
 
     <a-nft
@@ -76,15 +79,18 @@
         visible="false"
       ></a-entity>
 
-      <a-text
-        class="textB"
-        value="I think I'll get some ramen."
-        color="blue"
-        width="1.5"
-        rotation="90 0 0"
-        position="0 0 0.2"
-        visible="false"
-      ></a-text>
+<a-text
+  class="textB"
+  value="I think I'll get some ramen."
+  color="blue"
+  width="4"
+  align="center"
+  anchor="center"
+  rotation="-90 0 0"
+  position="0 0.05 0"
+  scale="0.6 0.6 0.6"
+  visible="false"
+></a-text>
     </a-nft>
 
     <a-nft
@@ -102,28 +108,33 @@
         visible="false"
       ></a-entity>
 
-      <a-text
-        class="textC"
-        value="Mmm tasty. Ramen is the best."
-        color="white"
-        width="1.5"
-        rotation="90 0 0"
-        position="0 0 0.2"
-        visible="false"
-      ></a-text>
+<a-text
+  class="textC"
+  value="Mmm tasty. Ramen is the best."
+  color="white"
+  width="4"
+  align="center"
+  anchor="center"
+  rotation="-90 0 0"
+  position="0 0.05 0"
+  scale="0.6 0.6 0.6"
+  visible="false"
+></a-text>
     </a-nft>
 
-    <a-entity camera>
-      <a-text
-        id="startText"
-        value="I feel quite hungry! Time to go out."
-        position="0 0 -5"
-        color="yellow"
-        width="1.5"
-        scale="1 1 1"
-        rotation="0 0 0"
-      ></a-text>
-    </a-entity>
+<a-entity camera>
+  <a-text
+    id="startText"
+    value="I feel quite hungry! Time to go out."
+    position="0 0 -3"
+    color="yellow"
+    width="4"
+    align="center"
+    anchor="center"
+    scale="1.0 1.0 1.0"
+    rotation="0 0 0"
+  ></a-text>
+</a-entity>
   </a-scene>
 
   <script>
