--- a/index.html
+++ b/index.html
@@ -54,9 +54,17 @@
             <a-entity class="modelA" gltf-model="https://lucian-lu.github.io/trm-lab-2/models/little_tokyo.glb"
                 scale="0.1 0.1 0.1" position="25 0 -25" rotation="-90 0 0" visible="false"></a-entity>
 
-            <a-text class="textA" value="Now to find somewhere to eat..." color="red" width="4" align="center"
-                anchor="center" rotation="-90 0 0" position="0 0 -0.5" scale="0.8 0.8 0.8" visible="false">
-            </a-text>
+<a-text class="textA"
+        value="Now to find somewhere to eat..."
+        color="red"
+        width="4"
+        align="center"
+        anchor="center"
+        rotation="-90 0 0"
+        position="0 0 -0.5"
+        scale="0.8 0.8 0.8"
+        visible="false">
+</a-text>
         </a-nft>
 
         <a-nft id="markerB" type="nft"
@@ -65,9 +73,17 @@
             <a-entity class="modelB" gltf-model="https://lucian-lu.github.io/trm-lab-2/models/ramen_bar.glb"
                 scale="3 3 3" position="10 0 -5" rotation="-90 0 0" visible="false"></a-entity>
 
-            <a-text class="textB" value="I think I'll get some ramen." color="blue" width="4" align="center"
-                anchor="center" rotation="-90 0 0" position="0 0 -0.5" scale="0.8 0.8 0.8" visible="false">
-            </a-text>
+<a-text class="textB"
+        value="I think I'll get some ramen."
+        color="blue"
+        width="4"
+        align="center"
+        anchor="center"
+        rotation="-90 0 0"
+        position="0 0 -0.5"
+        scale="0.8 0.8 0.8"
+        visible="false">
+</a-text>
         </a-nft>
 
         <a-nft id="markerC" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_menu/ramen_menu"
@@ -75,13 +91,22 @@
             <a-entity class="modelC" gltf-model="https://lucian-lu.github.io/trm-lab-2/models/ramen.glb" scale="5 5 5"
                 position="0 0 -4" rotation="-90 0 0" visible="false"></a-entity>
 
-            <a-text class="textC" value="Mmm tasty. Ramen is the best." color="white" width="4" align="center"
-                anchor="center" rotation="-90 0 0" position="0 0.05 0" scale="0.6 0.6 0.6" visible="false"></a-text>
+<a-text class="textC"
+        value="Mmm tasty. Ramen is the best."
+        color="white"
+        width="4"
+        align="center"
+        anchor="center"
+        rotation="-90 0 0"
+        position="0 0 -0.5"
+        scale="0.8 0.8 0.8"
+        visible="false">
+</a-text>
         </a-nft>
 
         <a-entity camera>
-            <a-text class="textC" value="Mmm tasty. Ramen is the best." color="white" width="4" align="center"
-                anchor="center" rotation="-90 0 0" position="0 0 -0.5" scale="0.8 0.8 0.8" visible="false">
+            <a-text id="startText" value="I feel quite hungry! Time to go out." position="-1 -2 -5" color="yellow"
+                width="2.5" scale="1 1 1" rotation="0 0 0" align="left" anchor="left">
             </a-text>
 
         </a-entity>
