--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 <a-text class="textA"
         value="Now to find somewhere to eat..."
         color="red"
-        width="4"
+        width="3"
         align="center"
         anchor="center"
-        rotation="-90 0 0"
-        position="0 0 -0.5"
-        scale="0.8 0.8 0.8"
+        look-at="[camera]"
+        rotation="0 0 0"
+        position="0 0.2 0"
+        scale="1 1 1"
         visible="false">
 </a-text>
         </a-nft>
@@ -105,7 +106,7 @@
         </a-nft>
 
         <a-entity camera>
-            <a-text id="startText" value="I feel quite hungry! Time to go out." position="-1 -2 -5" color="yellow"
+            <a-text id="startText" value="I feel quite hungry! Time to go out." position="-1 -0.75 -5" color="yellow"
                 width="2.5" scale="1 1 1" rotation="0 0 0" align="left" anchor="left">
             </a-text>
 
