--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 <a-text class="textA"
         value="Now to find somewhere to eat..."
         color="red"
-        width="300"
+        width="2"
         align="center"
         anchor="center"
         look-at="[camera]"
         rotation="0 0 0"
-        position="0 0.2 0"
+        position="0 0.5 0"
         scale="1 1 1"
         visible="false">
 </a-text>
@@ -77,12 +77,13 @@
 <a-text class="textB"
         value="I think I'll get some ramen."
         color="blue"
-        width="100"
+        width="1.8"
         align="center"
         anchor="center"
-        rotation="-90 0 0"
-        position="0 0 -0.5"
-        scale="0.8 0.8 0.8"
+        look-at="[camera]"
+        rotation="0 0 0"
+        position="0 0.6 0"
+        scale="0.9 0.9 0.9"
         visible="false">
 </a-text>
         </a-nft>
@@ -95,12 +96,13 @@
 <a-text class="textC"
         value="Mmm tasty. Ramen is the best."
         color="white"
-        width="1000"
+        width="2.5"
         align="center"
         anchor="center"
-        rotation="-90 0 0"
-        position="0 0 -0.5"
-        scale="0.8 0.8 0.8"
+        look-at="[camera]"
+        rotation="0 0 0"
+        position="0 0.7 0"
+        scale="0.9 0.9 0.9"
         visible="false">
 </a-text>
         </a-nft>
